--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>Katy Math</title>
 <script src="https://cdn.tailwindcss.com"></script>
-
 <style>
 .token-spin { animation: spin 3s linear infinite; }
 @keyframes spin { from{transform:rotateY(0)} to{transform:rotateY(360deg)} }
@@ -17,47 +16,38 @@
   animation: spin 1s linear infinite;
 }
 
-.pulse {
-  animation: pulse 1.5s infinite;
-}
-@keyframes pulse {
-  0%{opacity:.3}50%{opacity:1}100%{opacity:.3}
-}
+.pulse { animation: pulse 1.5s infinite; }
+@keyframes pulse { 0%{opacity:.3}50%{opacity:1}100%{opacity:.3} }
 </style>
 </head>
-
 <body class="bg-gray-900 text-gray-100 min-h-screen">
 
 <header id="header" class="hidden fixed top-0 w-full bg-gray-800 z-40 shadow">
-  <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
-    <div class="flex items-center gap-4">
-      <div class="flex items-center gap-2">
-        <div class="token-spin text-yellow-400 text-xl">🪙</div>
-        <span id="creditCount">0</span>
-      </div>
-      <button onclick="showTierDetails()" class="text-sm text-blue-400 underline">
-        Tier: <span id="tierLabel">Basic</span>
-      </button>
-    </div>
-    <div class="flex gap-4">
-      <button onclick="navigate('dashboard')">Dashboard</button>
-      <button onclick="navigate('tokens')">Tokens</button>
-      <button onclick="navigate('leaderboard')">Leaderboard</button>
-      <button onclick="navigate('account')">Account</button>
-      <button onclick="logOut()" class="bg-red-600 px-3 py-1 rounded">Logout</button>
-    </div>
+<div class="max-w-6xl mx-auto flex justify-between items-center p-4">
+<div class="flex items-center gap-4">
+  <div class="flex items-center gap-2">
+    <div class="token-spin text-yellow-400 text-xl">🪙</div>
+    <span id="creditCount">0</span>
   </div>
+  <button id="tierBtn" class="text-sm text-blue-400 underline">Tier: <span id="tierLabel">Basic</span></button>
+</div>
+<div class="flex gap-4">
+  <button onclick="navigate('dashboard')">Dashboard</button>
+  <button onclick="navigate('tokens')">Tokens</button>
+  <button onclick="navigate('leaderboard')">Leaderboard</button>
+  <button onclick="navigate('account')">Account</button>
+  <button id="logoutBtn" class="bg-red-600 px-3 py-1 rounded">Logout</button>
+</div>
+</div>
 </header>
 
 <main id="appContainer" class="hidden pt-24 max-w-6xl mx-auto p-4">
-
 <section id="dashboardPage">
 <h2 class="text-xl mb-4">General Links</h2>
 <div id="links" class="grid grid-cols-3 gap-4"></div>
 </section>
 
 <section id="tokensPage" class="hidden space-y-6">
-
 <div class="bg-gray-800 p-6 rounded">
   <div class="flex items-center gap-4">
     <div class="token-spin text-4xl">🪙</div>
@@ -77,11 +67,8 @@
 <h3 class="font-semibold mb-2">Referral</h3>
 <input id="refInput" placeholder="Enter referral code"
 class="w-full bg-gray-700 p-2 rounded mb-2">
-<button onclick="applyReferral()" class="bg-green-600 w-full py-2 rounded">
-Apply Referral (+60)
-</button>
+<button id="refBtn" class="bg-green-600 w-full py-2 rounded">Apply Referral (+60)</button>
 </div>
-
 </section>
 
 <section id="leaderboardPage" class="hidden">
@@ -97,7 +84,6 @@ Total Minutes on Site: <span id="totalMinutes">0</span>
 </div>
 </div>
 </section>
-
 </main>
 
 <!-- IFRAME -->
@@ -105,7 +91,6 @@ Total Minutes on Site: <span id="totalMinutes">0</span>
 <div class="absolute top-4 left-4 bg-gray-800 px-4 py-2 rounded text-green-400 font-mono">
 ⏱ <span id="iframeTimer">45:00</span>
 </div>
-
 <button onclick="closeIframe()" class="absolute top-4 right-4 bg-red-600 px-4 py-2 rounded">Close</button>
 
 <div id="iframeLoader" class="absolute inset-0 flex flex-col items-center justify-center bg-black">
@@ -127,15 +112,28 @@ authDomain:"math-katy.firebaseapp.com",
 projectId:"math-katy"
 });
 
-const auth=getAuth(app);
-const db=getFirestore(app);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-let userData,seconds=0,active=true;
+let userData=null, seconds=0, active=true;
 
-onAuthStateChanged(auth,async u=>{
-if(!u) return;
-const snap=await getDoc(doc(db,"users",u.uid));
-userData=snap.data();
+// cache DOM
+const header=document.getElementById("header"),
+      appContainer=document.getElementById("appContainer"),
+      creditCount=document.getElementById("creditCount"),
+      tierLabel=document.getElementById("tierLabel"),
+      dailyTracker=document.getElementById("dailyTracker"),
+      nextReward=document.getElementById("nextReward"),
+      leaderboard=document.getElementById("leaderboard"),
+      accountInfo=document.getElementById("accountInfo"),
+      totalMinutesEl=document.getElementById("totalMinutes"),
+      refInput=document.getElementById("refInput"),
+      refBtn=document.getElementById("refBtn");
+
+onAuthStateChanged(auth,async user=>{
+if(!user) return;
+const snap = await getDoc(doc(db,"users",user.uid));
+userData = snap.exists()?snap.data():{};
 header.classList.remove("hidden");
 appContainer.classList.remove("hidden");
 updateAll();
@@ -143,33 +141,40 @@ setInterval(trackTime,1000);
 });
 
 function trackTime(){
-if(!active) return;
+if(!active || !userData) return;
 seconds++;
 if(seconds%60===0){
-userData.totalMinutes=(userData.totalMinutes||0)+1;
+userData.totalMinutes = (userData.totalMinutes||0)+1;
 updateDoc(doc(db,"users",auth.currentUser.uid),{
-totalMinutes:increment(1),
-weekMinutes:increment(1)
+totalMinutes: increment(1),
+weekMinutes: increment(1)
 });
-document.getElementById("totalMinutes").textContent=userData.totalMinutes;
+totalMinutesEl.textContent = userData.totalMinutes;
 }
 }
 
 function updateAll(){
-creditCount.textContent=userData.credits;
-tierLabel.textContent="Basic";
-document.getElementById("totalMinutes").textContent=userData.totalMinutes||0;
+creditCount.textContent = userData.credits||0;
+tierLabel.textContent = tier();
 renderDaily();
 renderLeaderboard();
-document.getElementById("nextReward").textContent="Daily login +10 · Referral +60";
+nextReward.textContent = "Daily login +10 · Referral +60";
+updateAccount();
+}
+
+function tier(){
+const t=userData.totalEarned||0;
+if(t>=1000) return "VIP";
+if(t>=800) return "Gold";
+if(t>=400) return "Silver";
+return "Basic";
 }
 
 function renderDaily(){
 dailyTracker.innerHTML="";
 const streak=userData.streak||0;
 for(let i=1;i<=30;i++){
-dailyTracker.innerHTML+=`
-<div class="h-8 rounded ${i<=streak?"bg-green-500":"bg-gray-700"}"></div>`;
+dailyTracker.innerHTML+=`<div class="h-8 rounded ${i<=streak?"bg-green-500":"bg-gray-700"}"></div>`;
 }
 }
 
@@ -180,21 +185,35 @@ const arr=[];
 snap.forEach(d=>arr.push(d.data()));
 arr.sort((a,b)=>(b.weekMinutes||0)-(a.weekMinutes||0));
 arr.slice(0,5).forEach((u,i)=>{
-leaderboard.innerHTML+=`
-<div>${i+1}. ${u.firstName||"User"} — ${u.weekMinutes||0} min</div>`;
+leaderboard.innerHTML+=`<div>${i+1}. ${u.firstName||"User"} — ${u.weekMinutes||0} min</div>`;
 });
 }
 
-function applyReferral(){
-if(userData.referred) return;
+function updateAccount(){
+accountInfo.innerHTML=`
+<div>Name: ${userData.firstName||""} ${userData.lastName||""}</div>
+<div>Grade: ${userData.grade||""}</div>
+<div>Total Earned: ${userData.totalEarned||0}</div>
+`;
+}
+
+function navigate(page){
+["dashboard","tokens","account","leaderboard"].forEach(p=>{
+document.getElementById(p+"Page").classList.add("hidden");
+});
+document.getElementById(page+"Page").classList.remove("hidden");
+}
+
+refBtn.addEventListener("click",()=>{
+if(!userData || userData.referred) return;
 userData.referred=true;
-userData.credits+=60;
+userData.credits=(userData.credits||0)+60;
 updateDoc(doc(db,"users",auth.currentUser.uid),{
-credits:increment(60),
-referred:true
+credits: increment(60),
+referred: true
 });
 creditCount.textContent=userData.credits;
-}
+});
 
 async function logOut(){
 await signOut(auth);
@@ -202,8 +221,8 @@ location.reload();
 }
 
 document.addEventListener("visibilitychange",()=>active=!document.hidden);
-Object.assign(window,{navigate,logOut,applyReferral});
-</script>
 
+Object.assign(window,{navigate,logOut});
+</script>
 </body>
 </html>
