--- a/index.html
+++ b/index.html
@@ -20,85 +20,81 @@
 @keyframes pulse { 0%{opacity:.3}50%{opacity:1}100%{opacity:.3} }
 </style>
 </head>
+
 <body class="bg-gray-900 text-gray-100 min-h-screen">
 
 <header id="header" class="hidden fixed top-0 w-full bg-gray-800 z-40 shadow">
-<div class="max-w-6xl mx-auto flex justify-between items-center p-4">
-<div class="flex items-center gap-4">
-  <div class="flex items-center gap-2">
-    <div class="token-spin text-yellow-400 text-xl">🪙</div>
-    <span id="creditCount">0</span>
+  <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
+    <div class="flex items-center gap-4">
+      <div class="flex items-center gap-2">
+        <div class="token-spin text-yellow-400 text-xl">🪙</div>
+        <span id="creditCount">0</span>
+      </div>
+      <button id="tierBtn" class="text-sm text-blue-400 underline">Tier: <span id="tierLabel">Basic</span></button>
+    </div>
+    <div class="flex gap-4">
+      <button onclick="navigate('dashboard')">Dashboard</button>
+      <button onclick="navigate('tokens')">Tokens</button>
+      <button onclick="navigate('leaderboard')">Leaderboard</button>
+      <button onclick="navigate('account')">Account</button>
+      <button id="logoutBtn" class="bg-red-600 px-3 py-1 rounded">Logout</button>
+    </div>
   </div>
-  <button id="tierBtn" class="text-sm text-blue-400 underline">Tier: <span id="tierLabel">Basic</span></button>
-</div>
-<div class="flex gap-4">
-  <button onclick="navigate('dashboard')">Dashboard</button>
-  <button onclick="navigate('tokens')">Tokens</button>
-  <button onclick="navigate('leaderboard')">Leaderboard</button>
-  <button onclick="navigate('account')">Account</button>
-  <button id="logoutBtn" class="bg-red-600 px-3 py-1 rounded">Logout</button>
-</div>
-</div>
 </header>
 
 <main id="appContainer" class="hidden pt-24 max-w-6xl mx-auto p-4">
+
 <section id="dashboardPage">
-<h2 class="text-xl mb-4">General Links</h2>
-<div id="links" class="grid grid-cols-3 gap-4"></div>
+  <h2 class="text-xl mb-4">General Links</h2>
+  <div id="links" class="grid grid-cols-3 gap-4"></div>
 </section>
 
 <section id="tokensPage" class="hidden space-y-6">
-<div class="bg-gray-800 p-6 rounded">
-  <div class="flex items-center gap-4">
-    <div class="token-spin text-4xl">🪙</div>
-    <div>
-      <div class="font-semibold">Next Reward</div>
-      <div id="nextReward" class="text-green-400 text-sm"></div>
+  <div class="bg-gray-800 p-6 rounded">
+    <div class="flex items-center gap-4">
+      <div class="token-spin text-4xl">🪙</div>
+      <div>
+        <div class="font-semibold">Next Reward</div>
+        <div id="nextReward" class="text-green-400 text-sm"></div>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="bg-gray-800 p-6 rounded">
-<h3 class="font-semibold mb-3">Daily Streak</h3>
-<div id="dailyTracker" class="grid grid-cols-10 gap-2"></div>
-</div>
-
-<div class="bg-gray-800 p-6 rounded">
-<h3 class="font-semibold mb-2">Referral</h3>
-<input id="refInput" placeholder="Enter referral code"
-class="w-full bg-gray-700 p-2 rounded mb-2">
-<button id="refBtn" class="bg-green-600 w-full py-2 rounded">Apply Referral (+60)</button>
-</div>
+  <div class="bg-gray-800 p-6 rounded">
+    <h3 class="font-semibold mb-3">Daily Streak</h3>
+    <div id="dailyTracker" class="grid grid-cols-10 gap-2"></div>
+  </div>
 </section>
 
 <section id="leaderboardPage" class="hidden">
-<h2 class="text-xl mb-4">Weekly Leaderboard</h2>
-<div id="leaderboard" class="bg-gray-800 p-4 rounded space-y-2"></div>
+  <h2 class="text-xl mb-4">Weekly Leaderboard</h2>
+  <div id="leaderboard" class="bg-gray-800 p-4 rounded space-y-2"></div>
 </section>
 
 <section id="accountPage" class="hidden">
-<div class="bg-gray-800 p-6 rounded space-y-2">
-<div id="accountInfo"></div>
-<div class="text-sm text-gray-400">
-Total Minutes on Site: <span id="totalMinutes">0</span>
-</div>
-</div>
+  <div class="bg-gray-800 p-6 rounded space-y-2">
+    <div id="accountInfo"></div>
+    <div class="text-sm text-gray-400">
+      Total Minutes on Site: <span id="totalMinutes">0</span>
+    </div>
+  </div>
 </section>
+
 </main>
 
 <!-- IFRAME -->
 <div id="iframeModal" class="hidden fixed inset-0 bg-black z-50">
-<div class="absolute top-4 left-4 bg-gray-800 px-4 py-2 rounded text-green-400 font-mono">
-⏱ <span id="iframeTimer">45:00</span>
-</div>
-<button onclick="closeIframe()" class="absolute top-4 right-4 bg-red-600 px-4 py-2 rounded">Close</button>
+  <div class="absolute top-4 left-4 bg-gray-800 px-4 py-2 rounded text-green-400 font-mono">
+    ⏱ <span id="iframeTimer">45:00</span>
+  </div>
+  <button onclick="closeIframe()" class="absolute top-4 right-4 bg-red-600 px-4 py-2 rounded">Close</button>
 
-<div id="iframeLoader" class="absolute inset-0 flex flex-col items-center justify-center bg-black">
-<div class="loader mb-4"></div>
-<div class="pulse text-gray-400">Preparing learning environment…</div>
-</div>
+  <div id="iframeLoader" class="absolute inset-0 flex flex-col items-center justify-center bg-black">
+    <div class="loader mb-4"></div>
+    <div class="pulse text-gray-400">Preparing learning environment…</div>
+  </div>
 
-<iframe id="contentIframe" class="w-full h-full hidden"></iframe>
+  <iframe id="contentIframe" class="w-full h-full hidden"></iframe>
 </div>
 
 <script type="module">
@@ -106,123 +102,144 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebas
 import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-auth.js";
 import { getFirestore, doc, getDoc, updateDoc, increment, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-firestore.js";
 
+// Firebase config
 const app = initializeApp({
-apiKey:"AIzaSyA32Jc5l0jcWW9iAT3q1gUEUsthN6QkY1k",
-authDomain:"math-katy.firebaseapp.com",
-projectId:"math-katy"
+  apiKey:"AIzaSyA32Jc5l0jcWW9iAT3q1gUEUsthN6QkY1k",
+  authDomain:"math-katy.firebaseapp.com",
+  projectId:"math-katy"
 });
-
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-let userData=null, seconds=0, active=true;
+// Cached DOM
+const header = document.getElementById("header"),
+      appContainer = document.getElementById("appContainer"),
+      creditCount = document.getElementById("creditCount"),
+      tierLabel = document.getElementById("tierLabel"),
+      linksEl = document.getElementById("links"),
+      dailyTracker = document.getElementById("dailyTracker"),
+      nextReward = document.getElementById("nextReward"),
+      leaderboard = document.getElementById("leaderboard"),
+      accountInfo = document.getElementById("accountInfo"),
+      totalMinutesEl = document.getElementById("totalMinutes"),
+      logoutBtn = document.getElementById("logoutBtn");
 
-// cache DOM
-const header=document.getElementById("header"),
-      appContainer=document.getElementById("appContainer"),
-      creditCount=document.getElementById("creditCount"),
-      tierLabel=document.getElementById("tierLabel"),
-      dailyTracker=document.getElementById("dailyTracker"),
-      nextReward=document.getElementById("nextReward"),
-      leaderboard=document.getElementById("leaderboard"),
-      accountInfo=document.getElementById("accountInfo"),
-      totalMinutesEl=document.getElementById("totalMinutes"),
-      refInput=document.getElementById("refInput"),
-      refBtn=document.getElementById("refBtn");
+let userData = null;
+let seconds = 0;
+let active = true;
 
-onAuthStateChanged(auth,async user=>{
-if(!user) return;
-const snap = await getDoc(doc(db,"users",user.uid));
-userData = snap.exists()?snap.data():{};
-header.classList.remove("hidden");
-appContainer.classList.remove("hidden");
-updateAll();
-setInterval(trackTime,1000);
+// Auth
+onAuthStateChanged(auth, async user => {
+  if (!user) return;
+
+  const snap = await getDoc(doc(db, "users", user.uid));
+  userData = snap.exists() ? snap.data() : {};
+  header.classList.remove("hidden");
+  appContainer.classList.remove("hidden");
+
+  updateAll();
+  setInterval(trackTime, 1000);
+  renderLinks();
 });
 
+// Track total minutes
 function trackTime(){
-if(!active || !userData) return;
-seconds++;
-if(seconds%60===0){
-userData.totalMinutes = (userData.totalMinutes||0)+1;
-updateDoc(doc(db,"users",auth.currentUser.uid),{
-totalMinutes: increment(1),
-weekMinutes: increment(1)
-});
-totalMinutesEl.textContent = userData.totalMinutes;
-}
+  if(!active || !userData) return;
+  seconds++;
+  if(seconds % 60 === 0){
+    userData.totalMinutes = (userData.totalMinutes || 0) + 1;
+    updateDoc(doc(db,"users",auth.currentUser.uid),{
+      totalMinutes: increment(1),
+      weekMinutes: increment(1)
+    });
+    totalMinutesEl.textContent = userData.totalMinutes;
+  }
 }
 
+// General update
 function updateAll(){
-creditCount.textContent = userData.credits||0;
-tierLabel.textContent = tier();
-renderDaily();
-renderLeaderboard();
-nextReward.textContent = "Daily login +10 · Referral +60";
-updateAccount();
+  creditCount.textContent = userData.credits || 0;
+  tierLabel.textContent = tier();
+  renderDaily();
+  renderLeaderboard();
+  nextReward.textContent = "Daily login +10 · Referral handled on sign-up";
+  updateAccount();
 }
 
+// Tier
 function tier(){
-const t=userData.totalEarned||0;
-if(t>=1000) return "VIP";
-if(t>=800) return "Gold";
-if(t>=400) return "Silver";
-return "Basic";
+  const t = userData.totalEarned || 0;
+  if(t>=1000) return "VIP";
+  if(t>=800) return "Gold";
+  if(t>=400) return "Silver";
+  return "Basic";
 }
 
+// Render daily streak
 function renderDaily(){
-dailyTracker.innerHTML="";
-const streak=userData.streak||0;
-for(let i=1;i<=30;i++){
-dailyTracker.innerHTML+=`<div class="h-8 rounded ${i<=streak?"bg-green-500":"bg-gray-700"}"></div>`;
-}
+  dailyTracker.innerHTML = "";
+  const streak = userData.streak || 0;
+  for(let i=1; i<=30; i++){
+    dailyTracker.innerHTML += `<div class="h-8 rounded ${i<=streak?"bg-green-500":"bg-gray-700"}"></div>`;
+  }
 }
 
+// Render leaderboard
 async function renderLeaderboard(){
-leaderboard.innerHTML="";
-const snap=await getDocs(collection(db,"users"));
-const arr=[];
-snap.forEach(d=>arr.push(d.data()));
-arr.sort((a,b)=>(b.weekMinutes||0)-(a.weekMinutes||0));
-arr.slice(0,5).forEach((u,i)=>{
-leaderboard.innerHTML+=`<div>${i+1}. ${u.firstName||"User"} — ${u.weekMinutes||0} min</div>`;
-});
+  leaderboard.innerHTML = "";
+  const snap = await getDocs(collection(db,"users"));
+  const arr = [];
+  snap.forEach(d=>arr.push(d.data()));
+  arr.sort((a,b) => (b.weekMinutes||0) - (a.weekMinutes||0));
+  arr.slice(0,5).forEach((u,i)=>{
+    leaderboard.innerHTML += `<div>${i+1}. ${u.firstName||"User"} — ${u.weekMinutes||0} min</div>`;
+  });
 }
 
+// Account info
 function updateAccount(){
-accountInfo.innerHTML=`
-<div>Name: ${userData.firstName||""} ${userData.lastName||""}</div>
-<div>Grade: ${userData.grade||""}</div>
-<div>Total Earned: ${userData.totalEarned||0}</div>
-`;
+  accountInfo.innerHTML = `
+  <div>Name: ${userData.firstName||""} ${userData.lastName||""}</div>
+  <div>Grade: ${userData.grade||""}</div>
+  <div>Total Earned: ${userData.totalEarned||0}</div>`;
 }
 
+// Navigate pages
 function navigate(page){
-["dashboard","tokens","account","leaderboard"].forEach(p=>{
-document.getElementById(p+"Page").classList.add("hidden");
-});
-document.getElementById(page+"Page").classList.remove("hidden");
+  ["dashboard","tokens","account","leaderboard"].forEach(p=>{
+    document.getElementById(p+"Page").classList.add("hidden");
+  });
+  document.getElementById(page+"Page").classList.remove("hidden");
 }
 
-refBtn.addEventListener("click",()=>{
-if(!userData || userData.referred) return;
-userData.referred=true;
-userData.credits=(userData.credits||0)+60;
-updateDoc(doc(db,"users",auth.currentUser.uid),{
-credits: increment(60),
-referred: true
-});
-creditCount.textContent=userData.credits;
+// Logout
+logoutBtn.addEventListener("click", async () => {
+  await signOut(auth);
+  location.reload();
 });
 
-async function logOut(){
-await signOut(auth);
-location.reload();
+// Render General Links (always 3)
+async function renderLinks(){
+  linksEl.innerHTML = "";
+  const snap = await getDocs(collection(db,"linkVotes"));
+  const votes = {};
+  snap.forEach(d=>votes[d.id] = d.data());
+
+  [1,2,3].forEach(i=>{
+    const v = votes["link"+i] || {yes:0, no:0};
+    linksEl.innerHTML += `
+      <div class="bg-gray-800 p-4 rounded cursor-pointer">
+        <div class="font-semibold">General Link ${i}</div>
+        <div class="text-xs text-gray-400 mt-2">
+          👍 ${v.yes} · 👎 ${v.no}
+        </div>
+      </div>`;
+  });
 }
 
-document.addEventListener("visibilitychange",()=>active=!document.hidden);
-
-Object.assign(window,{navigate,logOut});
+// Visibility tab
+document.addEventListener("visibilitychange", ()=>active = !document.hidden);
 </script>
+
 </body>
 </html>
