--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 </main>
 
 <!-- MODULE SCRIPTS (versioned to bypass cache) -->
+<script type="module" src="/js/blockExtensions.js"></script>
 <script type="module" src="/js/utils.js?v=4"></script>
 <script type="module" src="/js/auth.js?v=4"></script>
 <script type="module" src="/js/dashboard.js?v=4"></script>
