--- a/index.html
+++ b/index.html
@@ -80,13 +80,14 @@
 </main>
 
 <!-- MODULE SCRIPTS (versioned to bypass cache) -->
-<script type="module" src="/js/blockExtensions.js"></script>
-<script type="module" src="/js/utils.js?v=4"></script>
-<script type="module" src="/js/auth.js?v=4"></script>
-<script type="module" src="/js/dashboard.js?v=4"></script>
-<script type="module" src="/js/tokens.js?v=4"></script>
-<script type="module" src="/js/leaderboard.js?v=4"></script>
-<script type="module" src="/js/account.js?v=4"></script>
+<script type="module" src="./js/blockExtensions.js"></script>
+<script type="module" src="./js/utils.js?v=5"></script>
+<script type="module" src="./js/auth.js?v=5"></script>
+<script type="module" src="./js/dashboard.js?v=5"></script>
+<script type="module" src="./js/tokens.js?v=5"></script>
+<script type="module" src="./js/leaderboard.js?v=5"></script>
+<script type="module" src="./js/account.js?v=5"></script>
+
 
 </body>
 </html>
