--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Katy Math</title>
+<title>Katy Math Debug</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
 /* Spinning token */
@@ -40,7 +40,7 @@
 </header>
 
 <!-- MAIN -->
-<main id="appContainer" class="hidden pt-24 max-w-6xl mx-auto p-4">
+<main id="appContainer" class="pt-24 max-w-6xl mx-auto p-4">
   <!-- Dashboard -->
   <section id="dashboardPage">
     <h2 class="text-xl mb-4">General Links</h2>
@@ -79,7 +79,7 @@
   </section>
 </main>
 
-<!-- MODULE SCRIPTS (versioned to bypass cache) -->
+<!-- MODULE SCRIPTS -->
 <script type="module" src="./js/blockExtensions.js"></script>
 <script type="module" src="./js/utils.js?v=5"></script>
 <script type="module" src="./js/auth.js?v=5"></script>
@@ -88,6 +88,9 @@
 <script type="module" src="./js/leaderboard.js?v=5"></script>
 <script type="module" src="./js/account.js?v=5"></script>
 
+<script>
+console.log("Debug: index.html loaded. App container should be visible for testing.");
+</script>
 
 </body>
 </html>
