--- a/index.html
+++ b/index.html
@@ -16,8 +16,22 @@
 .pulse { animation: pulse 1.5s infinite; }
 @keyframes pulse { 0%{opacity:.3}50%{opacity:1}100%{opacity:.3} }
 
-/* Login modal */
-#loginModal { position:fixed; inset:0; display:flex; align-items:center; justify-content:center; background:rgba(0,0,0,0.6); z-index:50; }
+/* Login modal
+   NOTE: modal is hidden by default via the `hidden` class.
+   We only apply display:flex (and background) when the element does NOT have .hidden
+*/
+#loginModal {
+  position:fixed;
+  inset:0;
+  z-index:50;
+  /* no display here so .hidden can control visibility */
+}
+#loginModal:not(.hidden) {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:rgba(0,0,0,0.6);
+}
 #loginModal .panel { width:320px; background:#0f172a; padding:18px; border-radius:8px; box-shadow:0 6px 30px rgba(0,0,0,0.6); }
 #loginModal input { width:100%; margin-top:8px; padding:8px; background:#0b1220; border:1px solid #1f2937; color:#e5e7eb; border-radius:6px; }
 #loginModal button { margin-top:12px; width:100%; }
