--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   position:fixed;
   inset:0;
   z-index:50;
-  /* no display here so .hidden can control visibility */
 }
 #loginModal:not(.hidden) {
   display:flex;
@@ -35,6 +34,42 @@
 #loginModal .panel { width:320px; background:#0f172a; padding:18px; border-radius:8px; box-shadow:0 6px 30px rgba(0,0,0,0.6); }
 #loginModal input { width:100%; margin-top:8px; padding:8px; background:#0b1220; border:1px solid #1f2937; color:#e5e7eb; border-radius:6px; }
 #loginModal button { margin-top:12px; width:100%; }
+
+/* Welcome overlay */
+#welcomeOverlay { position: fixed; inset: 0; display: none; align-items: center; justify-content: center; z-index:60; pointer-events:none; }
+#welcomeOverlay.show { display:flex; pointer-events:auto; }
+.welcome-card {
+  background: linear-gradient(135deg,#0ea5a4,#7c3aed);
+  color: white;
+  padding: 22px 28px;
+  border-radius: 14px;
+  box-shadow: 0 12px 40px rgba(2,6,23,0.7);
+  transform: translateY(20px) scale(.96);
+  opacity: 0;
+  display:flex;
+  gap:12px;
+  align-items:center;
+}
+.welcome-logo {
+  width:64px; height:64px; border-radius:12px; background:rgba(255,255,255,.12); display:flex; align-items:center; justify-content:center; font-size:30px;
+  transform-origin:center;
+}
+@keyframes welcome-pop {
+  0% { transform: translateY(20px) scale(.96); opacity:0; }
+  60% { transform: translateY(-6px) scale(1.03); opacity:1; }
+  100% { transform: translateY(0) scale(1); opacity:1; }
+}
+@keyframes logo-spin {
+  0% { transform: rotate(-12deg) }
+  60% { transform: rotate(8deg) }
+  100% { transform: rotate(0deg) }
+}
+.welcome-card.animate { animation: welcome-pop 700ms cubic-bezier(.2,.9,.3,1) forwards; }
+.welcome-logo.animate { animation: logo-spin 800ms cubic-bezier(.2,.9,.3,1) forwards; }
+
+/* small helpers */
+.redeem-btn { background:#065f46; color:white; padding:6px 8px; border-radius:6px; font-size:12px; }
+.redeem-btn[disabled] { background:#334155; opacity:.6; cursor:not-allowed; }
 </style>
 </head>
 <body class="bg-gray-900 text-gray-100 min-h-screen">
@@ -95,6 +130,7 @@
     <div class="bg-gray-800 p-6 rounded space-y-2">
       <div id="accountInfo"></div>
       <div class="text-sm text-gray-400">Total Minutes on Site: <span id="totalMinutes">0</span></div>
+      <div id="referralArea" class="mt-3 text-sm"></div>
     </div>
   </section>
 </main>
@@ -106,9 +142,21 @@
     <div id="loginError" class="text-red-400 text-sm mt-2"></div>
     <input id="email" type="email" placeholder="Email" />
     <input id="password" type="password" placeholder="Password" />
+    <input id="referralCodeInput" type="text" placeholder="Referral code (optional)" />
     <button id="signInBtn" class="bg-blue-600 px-3 py-2 rounded">Sign In</button>
     <button id="signUpBtn" class="bg-green-600 px-3 py-2 rounded">Create Account</button>
     <div class="text-xs text-gray-400 mt-3">You must be signed in to use the site.</div>
+  </div>
+</div>
+
+<!-- Welcome overlay -->
+<div id="welcomeOverlay" aria-hidden="true">
+  <div class="welcome-card" id="welcomeCard">
+    <div class="welcome-logo" id="welcomeLogo">✨</div>
+    <div>
+      <div id="welcomeTitle" class="text-xl font-bold">Welcome</div>
+      <div id="welcomeSub" class="text-sm opacity-90">Great to see you — let's learn some math!</div>
+    </div>
   </div>
 </div>
 
@@ -118,16 +166,17 @@
 
 <!-- Firebase init (central) + login UI -->
 <script type="module" src="./js/firebase.js"></script>
-<script type="module" src="./js/login.js?v=6"></script>
+<script type="module" src="./js/login.js?v=7"></script>
 
 <!-- Auth (depends on firebase.js) -->
-<script type="module" src="./js/auth.js?v=6"></script>
+<script type="module" src="./js/auth.js?v=7"></script>
 
 <!-- Rest of app modules -->
 <script type="module" src="./js/dashboard.js?v=6"></script>
-<script type="module" src="./js/tokens.js?v=6"></script>
+<script type="module" src="./js/tokens.js?v=7"></script>
 <script type="module" src="./js/leaderboard.js?v=6"></script>
-<script type="module" src="./js/account.js?v=6"></script>
+<script type="module" src="./js/account.js?v=7"></script>
+<script type="module" src="./js/welcome.js?v=1"></script>
 
 <script>
 console.log("Debug: index.html loaded. App container should be visible for testing.");
