--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Katy Math Debug</title>
+<title>Katy Math</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
 /* Spinning token */
@@ -16,60 +16,56 @@
 .pulse { animation: pulse 1.5s infinite; }
 @keyframes pulse { 0%{opacity:.3}50%{opacity:1}100%{opacity:.3} }
 
-/* Login modal
-   NOTE: modal is hidden by default via the `hidden` class.
-   We only apply display:flex (and background) when the element does NOT have .hidden
-*/
-#loginModal {
-  position:fixed;
-  inset:0;
-  z-index:50;
-}
-#loginModal:not(.hidden) {
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  background:rgba(0,0,0,0.6);
-}
+/* Login modal */
+#loginModal { position:fixed; inset:0; z-index:50; }
+#loginModal:not(.hidden) { display:flex; align-items:center; justify-content:center; background:rgba(0,0,0,0.6); }
 #loginModal .panel { width:320px; background:#0f172a; padding:18px; border-radius:8px; box-shadow:0 6px 30px rgba(0,0,0,0.6); }
 #loginModal input { width:100%; margin-top:8px; padding:8px; background:#0b1220; border:1px solid #1f2937; color:#e5e7eb; border-radius:6px; }
 #loginModal button { margin-top:12px; width:100%; }
 
-/* Welcome overlay */
+/* Fullscreen welcome overlay */
 #welcomeOverlay { position: fixed; inset: 0; display: none; align-items: center; justify-content: center; z-index:60; pointer-events:none; }
 #welcomeOverlay.show { display:flex; pointer-events:auto; }
+.welcome-full {
+  width:100%; height:100%; display:flex; align-items:center; justify-content:center;
+  background: linear-gradient(180deg, rgba(2,6,23,0.95), rgba(2,6,23,0.85));
+  backdrop-filter: blur(6px);
+}
 .welcome-card {
   background: linear-gradient(135deg,#0ea5a4,#7c3aed);
-  color: white;
-  padding: 22px 28px;
-  border-radius: 14px;
-  box-shadow: 0 12px 40px rgba(2,6,23,0.7);
-  transform: translateY(20px) scale(.96);
-  opacity: 0;
-  display:flex;
-  gap:12px;
-  align-items:center;
+  color:white; padding:30px 36px; border-radius:18px; box-shadow:0 20px 60px rgba(2,6,23,0.7);
+  transform: translateY(20px) scale(.96); opacity: 0; display:flex; gap:18px; align-items:center;
+  max-width:920px; width:90%;
 }
-.welcome-logo {
-  width:64px; height:64px; border-radius:12px; background:rgba(255,255,255,.12); display:flex; align-items:center; justify-content:center; font-size:30px;
-  transform-origin:center;
-}
+.welcome-logo { width:88px; height:88px; border-radius:16px; background:rgba(255,255,255,.12); display:flex; align-items:center; justify-content:center; font-size:36px; transform-origin:center; }
 @keyframes welcome-pop {
-  0% { transform: translateY(20px) scale(.96); opacity:0; }
-  60% { transform: translateY(-6px) scale(1.03); opacity:1; }
+  0% { transform: translateY(30px) scale(.94); opacity:0; }
+  60% { transform: translateY(-8px) scale(1.03); opacity:1; }
   100% { transform: translateY(0) scale(1); opacity:1; }
 }
-@keyframes logo-spin {
-  0% { transform: rotate(-12deg) }
-  60% { transform: rotate(8deg) }
-  100% { transform: rotate(0deg) }
+@keyframes logo-bounce {
+  0% { transform: translateY(0) rotate(-6deg) }
+  50% { transform: translateY(-6px) rotate(8deg) }
+  100% { transform: translateY(0) rotate(0deg) }
 }
 .welcome-card.animate { animation: welcome-pop 700ms cubic-bezier(.2,.9,.3,1) forwards; }
-.welcome-logo.animate { animation: logo-spin 800ms cubic-bezier(.2,.9,.3,1) forwards; }
+.welcome-logo.animate { animation: logo-bounce 900ms cubic-bezier(.2,.9,.3,1) forwards; }
 
-/* small helpers */
-.redeem-btn { background:#065f46; color:white; padding:6px 8px; border-radius:6px; font-size:12px; }
-.redeem-btn[disabled] { background:#334155; opacity:.6; cursor:not-allowed; }
+/* Onboarding modal */
+#onboardModal { position:fixed; inset:0; z-index:70; }
+#onboardModal:not(.hidden) { display:flex; align-items:center; justify-content:center; background:rgba(0,0,0,0.6); }
+#onboardModal .panel { width:420px; background:#071024; padding:20px; border-radius:12px; color:#e6eef8; }
+
+/* daily streak interactive styles */
+.day-card { transition: transform .14s ease, box-shadow .14s ease; cursor: pointer; }
+.day-card:hover { transform: translateY(-6px) scale(1.02); box-shadow: 0 12px 30px rgba(2,6,23,0.6); }
+.redeem-btn { background:#065f46; color:white; padding:6px 8px; border-radius:8px; font-size:12px; border:none; }
+.redeem-btn[disabled] { background:#334155; opacity:.7; cursor:not-allowed; }
+.floating-credit {
+  position: absolute; pointer-events:none; transform: translateY(0); opacity:1;
+  transition: transform 700ms cubic-bezier(.2,.9,.3,1), opacity 700ms;
+  color:#34d399; font-weight:700;
+}
 </style>
 </head>
 <body class="bg-gray-900 text-gray-100 min-h-screen">
@@ -115,7 +111,7 @@
     </div>
     <div class="bg-gray-800 p-6 rounded">
       <h3 class="font-semibold mb-3">Daily Streak</h3>
-      <div id="dailyTracker" class="grid grid-cols-10 gap-2"></div>
+      <div id="dailyTracker" class="grid grid-cols-10 gap-3"></div>
     </div>
   </section>
 
@@ -135,7 +131,7 @@
   </section>
 </main>
 
-<!-- LOGIN MODAL (shown when not signed in) -->
+<!-- LOGIN MODAL -->
 <div id="loginModal" class="hidden" aria-hidden="true">
   <div class="panel">
     <h3 class="text-lg font-semibold">Sign in to Katy Math</h3>
@@ -143,19 +139,43 @@
     <input id="email" type="email" placeholder="Email" />
     <input id="password" type="password" placeholder="Password" />
     <input id="referralCodeInput" type="text" placeholder="Referral code (optional)" />
-    <button id="signInBtn" class="bg-blue-600 px-3 py-2 rounded">Sign In</button>
-    <button id="signUpBtn" class="bg-green-600 px-3 py-2 rounded">Create Account</button>
+    <div class="flex gap-2">
+      <button id="signInBtn" class="bg-blue-600 px-3 py-2 rounded">Sign In</button>
+      <button id="signUpBtn" class="bg-green-600 px-3 py-2 rounded">Create Account</button>
+    </div>
     <div class="text-xs text-gray-400 mt-3">You must be signed in to use the site.</div>
   </div>
 </div>
 
-<!-- Welcome overlay -->
+<!-- ONBOARDING MODAL (shown immediately after sign-up) -->
+<div id="onboardModal" class="hidden" aria-hidden="true">
+  <div class="panel">
+    <h3 class="text-lg font-semibold">Welcome! Tell us about you</h3>
+    <div id="onboardError" class="text-red-400 text-sm mt-2"></div>
+    <input id="onboardFirst" type="text" placeholder="First name" />
+    <input id="onboardLast" type="text" placeholder="Last name" />
+    <select id="onboardGrade" class="mt-2">
+      <option value="">Select grade</option>
+      <option>Kindergarten</option>
+      <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+      <option>6</option><option>7</option><option>8</option><option>9</option><option>10</option>
+      <option>11</option><option>12</option>
+    </select>
+    <div class="flex gap-2 mt-3">
+      <button id="onboardSave" class="bg-blue-600 px-3 py-2 rounded">Save & Continue</button>
+    </div>
+  </div>
+</div>
+
+<!-- FULLSCREEN WELCOME (returning users) -->
 <div id="welcomeOverlay" aria-hidden="true">
-  <div class="welcome-card" id="welcomeCard">
-    <div class="welcome-logo" id="welcomeLogo">✨</div>
-    <div>
-      <div id="welcomeTitle" class="text-xl font-bold">Welcome</div>
-      <div id="welcomeSub" class="text-sm opacity-90">Great to see you — let's learn some math!</div>
+  <div class="welcome-full">
+    <div class="welcome-card" id="welcomeCard">
+      <div class="welcome-logo" id="welcomeLogo">✨</div>
+      <div>
+        <div id="welcomeTitle" class="text-3xl font-bold">Welcome</div>
+        <div id="welcomeSub" class="text-lg opacity-90 mt-1">Great to see you — let's learn some math!</div>
+      </div>
     </div>
   </div>
 </div>
@@ -164,22 +184,19 @@
 <script type="module" src="./js/blockExtensions.js"></script>
 <script type="module" src="./js/utils.js?v=5"></script>
 
-<!-- Firebase init (central) + login UI -->
 <script type="module" src="./js/firebase.js"></script>
-<script type="module" src="./js/login.js?v=7"></script>
+<script type="module" src="./js/login.js?v=8"></script>
+<script type="module" src="./js/onboarding.js?v=1"></script>
+<script type="module" src="./js/auth.js?v=8"></script>
 
-<!-- Auth (depends on firebase.js) -->
-<script type="module" src="./js/auth.js?v=7"></script>
-
-<!-- Rest of app modules -->
 <script type="module" src="./js/dashboard.js?v=6"></script>
-<script type="module" src="./js/tokens.js?v=7"></script>
+<script type="module" src="./js/tokens.js?v=8"></script>
 <script type="module" src="./js/leaderboard.js?v=6"></script>
-<script type="module" src="./js/account.js?v=7"></script>
-<script type="module" src="./js/welcome.js?v=1"></script>
+<script type="module" src="./js/account.js?v=8"></script>
+<script type="module" src="./js/welcome.js?v=2"></script>
 
 <script>
-console.log("Debug: index.html loaded. App container should be visible for testing.");
+console.log("Debug: index.html loaded.");
 </script>
 
 </body>
