--- a/index.html
+++ b/index.html
@@ -122,13 +122,34 @@
   </section>
 
   <!-- Account -->
-  <section id="accountPage" class="hidden">
-    <div class="bg-gray-800 p-6 rounded space-y-2">
-      <div id="accountInfo"></div>
-      <div class="text-sm text-gray-400">Total Minutes on Site: <span id="totalMinutes">0</span></div>
-      <div id="referralArea" class="mt-3 text-sm"></div>
+<section id="accountPage" class="hidden">
+  <div class="bg-gray-800 p-6 rounded space-y-4">
+    <div id="accountInfo"></div>
+    
+    <div id="editProfileForm" class="hidden border-t border-gray-700 pt-4 mt-4 space-y-3">
+      <div class="grid grid-cols-2 gap-2">
+        <input id="editFirst" type="text" placeholder="First Name" class="bg-gray-900 p-2 rounded border border-gray-700">
+        <input id="editLast" type="text" placeholder="Last Name" class="bg-gray-900 p-2 rounded border border-gray-700">
+      </div>
+      <select id="editGrade" class="w-full bg-gray-900 p-2 rounded border border-gray-700">
+        <option value="">Select grade</option>
+        <option>Kindergarten</option>
+        <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
+        <option>6</option><option>7</option><option>8</option><option>9</option><option>10</option>
+        <option>11</option><option>12</option>
+      </select>
+      <div class="flex gap-2">
+        <button id="saveProfileBtn" class="bg-green-600 px-4 py-2 rounded text-sm">Save Changes</button>
+        <button id="cancelEditBtn" class="bg-gray-600 px-4 py-2 rounded text-sm">Cancel</button>
+      </div>
     </div>
-  </section>
+
+    <button id="showEditBtn" class="text-sm text-blue-400 underline">Edit Profile</button>
+    
+    <div class="text-sm text-gray-400 pt-2 border-t border-gray-700">Total Minutes on Site: <span id="totalMinutes">0</span></div>
+    <div id="referralArea" class="mt-3 text-sm"></div>
+  </div>
+</section>
 </main>
 
 <!-- LOGIN MODAL -->
